[tool.poetry]
name = "ground-station-access-windows"
version = "0.1.0"
description = "Perform ground station access window analysis for Earth satellites."
authors = ["Lacico <lacicocodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymap3d = "^3.1.0"
skyfield = "^1.49"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
